# openpli-enigma2-sh4

./: .travis.yml  configure.ac  skin.py
data/: keymap.xml  radio.mvi  unicable.xml
lib/driver/: hdmi_cec.cpp  vfd.cpp
lib/dvb/: decoder.cpp  dvb.cpp  dvbtime.cpp  epgcache.cpp  filepush.cpp  filepush.h  frontend.cpp  frontendparms.cpp  idvb.h  pmt.cpp  sec.cpp
lib/dvb_ci/: dvbci_session.cpp
lib/gdi/: epng.cpp  gpixmap.cpp  picload.cpp
lib/python/: ServiceReference.py  e2reactor.py  enigma_python.i  keyids.py  skin.py
lib/python/Components/: About.py  HdmiCec.py  InputDevice.py  Lcd.py  RcModel.py  SystemInfo.py  Task.py  UsageConfig.py
lib/python/Components/Renderer/: Listbox.py
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/Extensions/CutListEditor/: ui.py
lib/python/Plugins/Extensions/spark7162VFD/: Makefile.am  plugin.py
lib/python/Plugins/SystemPlugins/: Makefile.am
lib/python/Plugins/SystemPlugins/HdmiCEC/: plugin.py
lib/python/Plugins/SystemPlugins/NetworkWizard/: NetworkWizard.py
lib/python/Plugins/SystemPlugins/OSDPositionSetup/: overscanwizard.py  plugin.py
lib/python/Plugins/SystemPlugins/Satfinder/: plugin.py
lib/python/Plugins/SystemPlugins/SoftwareManager/: plugin.py
lib/python/Screens/: About.py  ChannelSelection.py  Hotkey.py  InfoBar.py  InfoBarGenerics.py  InputDeviceSetup.py  Standby.py  Wizard.py
lib/python/Tools/: Downloader.py  HardwareInfo.py  KeyBindings.py
lib/service/: iservice.h  servicedvb.cpp
main/: bsod.cpp  enigma.cpp
po/: ca.po  es.po  hu.po  lt.po  ru.po
tests/: enigma.py
(+4 files in other folders)
